# hexpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  flake.nix  project.cfg
.cache/clangd/index/: cmd.cpp.3EC7DBF529506D76.idx  cmd.h.51FA142017E554AB.idx  cmd_add.cpp.17D335C9F9E5F3CB.idx  cmd_add.h.A808BA8E0682F435.idx  cmd_build.cpp.12817DAD52192D50.idx  cmd_build.h.197B978E209134DE.idx  cmd_install.cpp.9BE462301D4B168D.idx  cmd_install.h.670002EE8DADB68D.idx  cmd_new.cpp.37EC164C08277253.idx  cmd_new.h.7661149377B44825.idx  cmd_run.cpp.09EA8393D60F420F.idx  cmd_run.h.6A8E24DFBB4102EC.idx  context.h.1C4298F90DE20373.idx  main.cpp.5A91FB96BFF13C3E.idx
.github/workflows/: c-cpp.yml
src/: context.h  main.cpp
src/commands/headers/: cmd.h  cmd_add.h  cmd_build.h  cmd_install.h  cmd_new.h  cmd_run.h  cmd_search.h
src/commands/sources/: cmd.cpp  cmd_add.cpp  cmd_build.cpp  cmd_install.cpp  cmd_new.cpp  cmd_run.cpp  cmd_search.cpp
